fixed an issue where some elements in yearly recap menu would overlap each other

--- a/src/style.css
+++ b/src/style.css
@@ -538,7 +538,7 @@ input::-webkit-inner-spin-button {
   color: var(--header-white);
   font-size: 1.3rem;
   font-weight: 500;
-  text-align: center;
+  /*  text-align: center; */
 }
 
 #delete-goal-button {
@@ -556,7 +556,6 @@ input::-webkit-inner-spin-button {
   background-color: rgba(84, 95, 125, 0.233);
   border: 1px solid rgba(255, 255, 255, 0.137);
   font-weight: 400;
-  /*   box-shadow: var(--box-shadow); */
 }
 
 #delete-goal-button:hover {
@@ -575,11 +574,20 @@ input::-webkit-inner-spin-button {
   display: none;
 }
 
-/* yearly recap window */
-
 #yearly-recap-wrapper {
-  height: 100%;
   background-color: rgb(27, 52, 82);
+  padding-bottom: 100px;
+}
+
+#calendars-and-yearly-review-wrapper {
+  position: relative;
+  display: grid;
+  grid-template-columns: minmax(0, 0.6fr) minmax(0, 0.4fr);
+  grid-template-rows: auto 1fr;
+  gap: 50px;
+  width: 95%;
+  min-height: 0;
+  padding-bottom: 30px;
 }
 
 #calendars-wrapper-yearly-recap {
@@ -587,47 +595,44 @@ input::-webkit-inner-spin-button {
   flex-wrap: wrap;
   gap: 30px;
   margin-top: 50px;
+  margin-left: 20px;
   justify-content: space-around;
   padding-bottom: 30px;
   border-radius: 16px;
   grid-row: 1/3;
-}
-
-#calendars-and-yearly-review-wrapper {
-  position: relative;
-  display: grid;
-  grid-template-columns: 0.6fr 0.4fr;
-  grid-template-rows: 300px 1fr;
-  gap: 130px;
-  width: 90%;
+  grid-column: 1/2;
 }
 
 #yearly-text-and-review-wrapper {
-  width: 80%;
+  width: 90%;
   padding-inline: 20px;
   margin-top: 50px;
-  margin-bottom: 300px;
+  margin-bottom: 50px;
+  margin-inline: auto;
   max-width: 700px;
-  align-self: start;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   grid-column: 2/3;
   grid-row: 1/2;
-  margin-inline: auto;
+  align-self: start;
+  align-items: start;
 }
 
 #textarea-yearly-review {
   height: 400px;
-  width: 80%;
+  width: 90%;
   overflow: auto;
   max-width: 700px;
   grid-column: 2/3;
-  padding-inline: 20px;
+  grid-row: 2/3;
+  padding: 20px;
   resize: none;
-  background-color: rgba(255, 255, 255, 0.13);
+  background-color: rgba(255, 255, 255, 0.877);
   border-radius: 16px;
   box-shadow: var(--box-shadow);
-  padding-block: 20px;
   font-size: 1.2rem;
-  color: rgb(241, 241, 241);
+  color: rgb(54, 54, 54);
   transition:
     box-shadow 0.3s ease,
     border-color 0.3s ease;
@@ -657,4 +662,18 @@ label[for='textarea-yearly-review'] {
 #yearly-statistics-text-projects,
 #yearly-recap-project-and-hours-text {
   margin-inline: auto;
+}
+
+#years-select {
+  font-size: 1.6rem;
+  background-color: rgba(255, 255, 255, 0.096);
+  color: white;
+  border-radius: 16px;
+  padding: 10px;
+  box-shadow: var(--box-shadow);
+}
+
+#years-select:hover {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.171);
 }
